# Cpp_for_programmers

Task1/: TaskA.cpp  TaskB.cpp  tempfile.txt
Task2/: opp1.cpp  opp4.cpp  opp5.cpp  opp6.cpp
Task3/opp1/: CMakeLists.txt  opp1_and_opp2.cpp
Task3/opp3/: CMakeLists.txt  commodity.cpp  commodity.h  main.cpp
Task3/opp4/: CMakeLists.txt  opp4.cpp
Task4/opp1/: CMakeLists.txt  main.cpp
Task4/opp2/: CMakeLists.txt  Instructions to run program  main.cpp
Task5/oppg1/: CMakeLists.txt  main.cpp
Task6/oppg1/: CMakeLists.txt  main.cpp
Task6/oppg2/: CMakeLists.txt  main.cpp
Task7/opp1/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
Task7/oppg2/: CMakeLists.txt  Set.cpp  Set.h  main.cpp
Task8/opp1/: main.cpp
Task8/opp2/: CMakeLists.txt  main.cpp  pair.cpp
